crates/strider/tests/snapshots/v2__aarch64be__calls__fib_recursive.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ q1", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x210170:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v19" [color="#888888", style=dashed];
  "v19" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "20" -> "6" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "20" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v21" [color="#888888", style=dashed];
  "v21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x210170:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "25" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "30" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "33" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "36" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "16" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "15" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ q0", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "45" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v46" [color="#888888", style=dashed];
  "v46" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ x1", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v47" [color="#888888", style=dashed];
  "v47" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="φ Val", shape=house, fillcolor="#163030"];
  "5" -> "48" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "26" -> "48" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v52" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v52" [color="#888888", style=dashed];
  "v52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "53" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "55" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "6" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "22" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "26" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "65" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "26" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "69" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "66" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
